<resources>
  <string name="app_name">CineBox</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="facebook_login">Login with facebook</string>
  <string name="google_login">Login with Google</string>
  <string name="new_message">New to CineBox? Sign Up Now!</string>
  <string name="login_remember_me">Remember Me</string>
  <string name="prompt_email">Email</string>
  <string name="login_password_hint">Password</string>
  <string name="login_username_hint">Username Or Email</string>
  <string name="login_successful">Login Successful</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="error_username_required">Username is required</string>
  <string name="error_password_required">Password is required</string>
  <string name="error_username_incorrect">Username is not correct</string>
  <string name="error_password_incorrect">Password is not correct</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
  <string name="title_activity_home">Home</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_activity_home_home">HomeHome</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_home2">Home2</string>
  <string name="section_format">Hello World from section: %1$d</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="tab_text_1">Home</string>
  <string name="tab_text_2">Latest</string>
  <string name="tab_text_3">Trending</string>
  <string name="tab_text_4">Genre</string>
  <string name="home">Home</string>
  <string name="music">Music</string>
  <string name="favorites">Favorites</string>
  <string name="rated">Rated</string>
  <string name="recommendation">Recommendation</string>
  <string name="todo">TODO</string>
  <string name="song_title">Song Title</string>
  <string name="artist">Artist</string>
  <string name="prev">PREV</string>
  <string name="play">PLAY</string>
  <string name="next">NEXT</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="search_title">Search</string>
  <string name="logout_title">Logout</string>
  <string name="logout_dialog">Do you want to log out?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="shuffle_on">Shuffle On</string>
  <string name="shuffle_off">Shuffle Off</string>
  <string name="repeat_on">Repeat On</string>
  <string name="repeat_off">Repeat Off</string>
  <string name="togglebutton">ToggleButton</string>

  <string name="latest">LATEST</string>
  <string name="trending">TRENDING</string>
  <string name="genre">GENRE</string>
  
  <string name="release">Release</string>
  <string name="duration">Duration</string>
  <string name="detail_genre">Genre</string>
  <string name="language">Language</string>
  <string name="pg">PG</string>
  <string name="rating">Rating</string>
  <string name="synopsis">Synopsis</string>
  <string name="watch_trailer"> Watch Trailer</string>


  <!--Songs-->
  <string name="welcome_to_party">Welcome To The Party Remix</string>
  <string name="jurassic_song">This Title Makes Me Jurassic</string>
  <string name="eggsy_is_back">Eggsy Is Back</string>
  <string name="the_avengers">The Avengers</string>

  <!--Artists-->
  <string name="lil_pump">Lil Pump, Diplo, French Montana</string>
  <string name="jurassic_artist">Michael Giacchino</string>
  <string name="eggsy_artist">Henry Jackman</string>
  <string name="the_avengers_artist">Alan Silvestri</string>
</resources>
