<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:showIn="@layout/fragment_music_list">

  <android.support.constraint.ConstraintLayout
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
      android:id="@+id/deadpool_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:onClick="handleSelection"
      android:layout_marginRight="8dp"
      app:cardBackgroundColor="@android:color/white"
      android:elevation="@dimen/_4sdp"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <android.support.constraint.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/deadpool"
          android:layout_width="83dp"
          android:layout_height="100dp"
          android:layout_marginTop="4dp"
          android:layout_marginBottom="4dp"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/deadpool"/>
        <TextView
          android:id="@+id/welcome_to_party"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/welcome_to_party"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toTopOf="@+id/welcome_to_party_artist"
          app:layout_constraintStart_toEndOf="@+id/deadpool"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/welcome_to_party_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/lil_pump"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/deadpool"
          app:layout_constraintTop_toBottomOf="@+id/welcome_to_party"
          />
      </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/jurassic_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:onClick="handleSelection"
      app:cardBackgroundColor="@android:color/white"
      android:elevation="@dimen/_4sdp"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/deadpool_card">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/jurassic"
          android:layout_width="83dp"
          android:layout_height="100dp"
          android:layout_marginTop="4dp"
          android:layout_marginBottom="4dp"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/jurassic"/>
        <TextView
          android:id="@+id/jurassic_song"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/jurassic_song"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toTopOf="@+id/jurassic_artist"
          app:layout_constraintStart_toEndOf="@+id/jurassic"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/jurassic_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/jurassic_artist"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/jurassic"
          app:layout_constraintTop_toBottomOf="@+id/jurassic_song"
          />
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/kingsman_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:onClick="handleSelection"
      app:cardBackgroundColor="@android:color/white"
      android:elevation="@dimen/_4sdp"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/jurassic_card">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/kingsman"
          android:layout_width="83dp"
          android:layout_height="100dp"
          android:layout_marginTop="4dp"
          android:layout_marginBottom="4dp"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/kingsman"/>
        <TextView
          android:id="@+id/kingsman_song"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/eggsy_is_back"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toTopOf="@+id/kingsman_artist"
          app:layout_constraintStart_toEndOf="@+id/kingsman"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/kingsman_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/eggsy_artist"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/kingsman"
          app:layout_constraintTop_toBottomOf="@+id/kingsman_song"
          />
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/avengers_card"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:onClick="handleSelection"
      app:cardBackgroundColor="@android:color/white"
      android:elevation="@dimen/_4sdp"
      app:cardCornerRadius="@dimen/_4sdp"
      app:cardUseCompatPadding="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/kingsman_card">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/avengers"
          android:layout_width="83dp"
          android:layout_height="100dp"
          android:layout_marginTop="4dp"
          android:layout_marginBottom="4dp"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/avengersinfinitywar"/>
        <TextView
          android:id="@+id/avengers_song"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/the_avengers"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toTopOf="@+id/avengers_artist"
          app:layout_constraintStart_toEndOf="@+id/avengers"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/avengers_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:text="@string/the_avengers_artist"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@+id/avengers"
          app:layout_constraintTop_toBottomOf="@+id/avengers_song"
          />
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

  </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>